--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
     <div class="nft-shop">
         <div class="category">
-            <a href="#">AsmrGraph</a>
+            <a href="#">BobaGraph</a>
             <a href="#">Abstract</a>
             <a href="#">Monkey</a>
             <a href="#">Cars</a>
